# RePhrase

./: .gitignore  App UML.uxf  README.md  RePhraser.spec  pyproject.toml  regex test.py  test.html  typh.html
src/: RePhraser.py  dark.qss  inheritance test.py  login.qss  subclass.py
src/lib/: AuthorEntry.py  AuthorTable.py  ClickableLabel.py  DarkPallete.py  Stores.py  TextEdit.py  Toolbar.py  qt_helper.py
src/rephraser/: RePhraser.py  __init__.py  __main__.py
src/rephraser/images/: images.py  images.qrc
src/rephraser/lib/: AuthorEntry.py  AuthorTable.py  ScrollBar.py  TextEdit.py  helper.py  qt_helper.py
test/: dict test.py  slot and signals.py
