[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rephraser"
version = "0.0.1"
description = "Rephrase essays and collage texts"
readme = "README.md"
authors = [{ name = "Deadbush25", email = "deadbush225@gmail.com" }]
# license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rewrite", "text", "rephrase"]
dependencies = ["PyQt5 >= 5.15.10"]
requires-python = ">=3.9"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Deadbush225/RePhrase"

# [project.scripts]
# realpython = "reader.__main__:main"

# # This is configuration specific to the `setuptools` build backend.
# # If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# # If there are data files included in your packages that need to be
# # installed, specify them here.
# package-data = { "rephraser" = ["*.png"] }
[tool.setuptools.package-data]
"*" = ["*.png", "*.ico"]
"rephraser" = ["*.qss"]
